# library

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  README.md  configuration.yml  dockerfile
backend/sql/: schema.sql
backend/src/: main.rs
backend/src/routes/: book_functions.rs  mod.rs
frontend/: README.md  dockerfile  nginx.conf  package.json
frontend/src/: App.jsx  index.js
frontend/src/components/: Book.jsx  BookForm.jsx  BookList.jsx  Interface.jsx  MainInterface.jsx  Notification.jsx
