[package]
name = "library-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
log = "0.4.14"
uuid = { version = "0.8", features = ["serde"] }
envconfig = "0.10"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid"]
